# cmu-10799-diffusion

./: .gitignore  DDIM_USAGE.md  delete.sh  download_celebA_full.py  hw1.ipynb  precompute.py  pyproject.toml  sample.py  split_data.py  train.py
configs/: ddim.yaml  ddpm.yaml  flow_matching.yaml  jit.yaml
notebooks/: 01_1d_playground.ipynb
scripts/: evaluate_modal_torch_fidelity.sh  evaluate_torch_fidelity.sh  evaluate_torch_fidelity_flow.sh  sample_ddim.sh  sample_ddpm.sh  train_local.sh
src/data/: __init__.py  celeba.py
src/methods/: __init__.py  ddpm.py  flow_matching.py  jit.py
src/models/: __init__.py  blocks.py  dit.py  unet.py
